# SmartCalc_v1.0

Calc/src/: Makefile  README.md
Calc/src/SmartCalc/: math_error.c  parser_coder.c  parser_of_stacks.c  polsh_calculate.c  s21_SmartCalc_v1.0.c  s21_SmartCalc_v1.0.h  stack_function.c
Calc/src/cpp/: CMakeLists.txt  credit.cpp  credit.h  credit.ui  deposit.cpp  deposit.h  deposit.ui  graph.cpp  graph.h  graph.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Calc/src/credit/: creditCalculation.c  creditCalculation.h
Calc/src/deposit/: depositCalculation.c  depositCalculation.h
Calc/src/dvi/: Doxyfile
Calc/src/tests/: func_tests.c  func_tests.h
